--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Django==1.10.2
+django-appconf==1.0.2
 django-classy-tags==0.8.0
+django-compressor==2.1
 django-sekizai==0.10.0
+rcssmin==1.0.6
+rjsmin==1.0.12
